# invoice_generator

./: .gitignore  README.md  main.py  pyproject.toml
data_refs/: data.example.json
template/: english.jinja.html  french.jinja.html  italian.jinja.html  spanish.jinja.html
