[project]
name = "invoice-generator"
version = "0.1.0"
description = "A small invoice PDF generator using JSON data and Jinja2 templates."
readme = "README.md"
authors = [
    { name = "Enrique Brazález", email = "enriquebs96@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "weasyprint>=68.1",
    "uv>=0.8.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0"
]

[tool.twine]
username = ""
password = ""
